--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "carro-forte",
-  "version": "0.2.0",
+  "version": "0.3.0",
   "private": true,
   "scripts": {
     "android": "react-native run-android",
@@ -10,6 +10,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-community/async-storage": "^1.11.0",
     "react": "16.13.1",
     "react-native": "0.63.0"
   },
