Mock async storage on tests

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-test-renderer": "16.13.1"
   },
   "jest": {
-    "preset": "react-native"
+    "preset": "react-native",
+    "setupFiles": ["./scripts/jest-setup.js"]
   }
 }
