--- a/ios/Podfile
+++ b/ios/Podfile
@@ -3,12 +3,12 @@ require_relative '../node_modules/@react-native-community/cli-platform-ios/nativ
 
 platform :ios, '10.0'
 
-target 'carroforte' do
+target 'c3f' do
   config = use_native_modules!
 
   use_react_native!(:path => config["reactNativePath"])
 
-  target 'carroforteTests' do
+  target 'c3fTests' do
     inherit! :complete
     # Pods for testing
   end
@@ -23,10 +23,10 @@ target 'carroforte' do
   end
 end
 
-target 'carroforte-tvOS' do
-  # Pods for carroforte-tvOS
+target 'c3f-tvOS' do
+  # Pods for c3f-tvOS
 
-  target 'carroforte-tvOSTests' do
+  target 'c3f-tvOSTests' do
     inherit! :search_paths
     # Pods for testing
   end
