--- a/ios/c3f.xcodeproj/xcshareddata/xcschemes/c3f.xcscheme
+++ b/ios/c3f.xcodeproj/xcshareddata/xcschemes/c3f.xcscheme
@@ -15,9 +15,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-               BuildableName = "carroforte.app"
-               BlueprintName = "carroforte"
-               ReferencedContainer = "container:carroforte.xcodeproj">
+               BuildableName = "c3f.app"
+               BlueprintName = "c3f"
+               ReferencedContainer = "container:c3f.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -33,9 +33,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
-               BuildableName = "carroforteTests.xctest"
-               BlueprintName = "carroforteTests"
-               ReferencedContainer = "container:carroforte.xcodeproj">
+               BuildableName = "c3fTests.xctest"
+               BlueprintName = "c3fTests"
+               ReferencedContainer = "container:c3f.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -55,9 +55,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "carroforte.app"
-            BlueprintName = "carroforte"
-            ReferencedContainer = "container:carroforte.xcodeproj">
+            BuildableName = "c3f.app"
+            BlueprintName = "c3f"
+            ReferencedContainer = "container:c3f.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </LaunchAction>
@@ -72,9 +72,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "carroforte.app"
-            BlueprintName = "carroforte"
-            ReferencedContainer = "container:carroforte.xcodeproj">
+            BuildableName = "c3f.app"
+            BlueprintName = "c3f"
+            ReferencedContainer = "container:c3f.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
