--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -1,12 +1,3 @@
-extends: '@react-native-community'
-rules:
-  curly:
-    - 'error'
-    - 'multi'
-  arrow-parens:
-    - 'error'
-    - 'as-needed'
-  jsx-quotes:
-    - 'error'
-    - 'prefer-single'
-  no-lonely-if: 'error'
+extends:
+    - '@react-native-community'
+    - 'eslint-config-prettier'
