--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
         "ios": "react-native run-ios",
         "start": "react-native start",
         "test": "jest",
-        "lint": "eslint --fix .",
-        "format": "prettier --write ."
+        "format": "eslint --fix . && prettier --write ."
     },
     "dependencies": {
         "@react-native-community/async-storage": "^1.11.0",
