--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -21,8 +21,13 @@
 # Android operating system, and which are packaged with your app's APK
 # https://developer.android.com/topic/libraries/support-library/androidx-rn
 android.useAndroidX=true
+
 # Automatically convert third-party libraries to use AndroidX
 android.enableJetifier=true
 
 # Version of flipper SDK to use with React Native
 FLIPPER_VERSION=0.37.0
+
+# Certificate values
+C3F_UPLOAD_STORE_FILE=c3f.keystore
+C3F_UPLOAD_KEY_ALIAS=c3f
