--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,9 +1,13 @@
 <manifest
   xmlns:android="http://schemas.android.com/apk/res/android"
+  xmlns:tools="http://schemas.android.com/tools"
   package="com.c3f"
 >
 
-  <uses-permission android:name="android.permission.INTERNET" />
+  <uses-permission tools:node="remove" android:name="android.permission.READ_PHONE_STATE" />
+  <uses-permission tools:node="remove" android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+  <uses-permission tools:node="remove" android:name="android.permission.READ_EXTERNAL_STORAGE" />
+  <uses-permission tools:node="remove" android:name="android.vending.CHECK_LICENSE" />
 
   <application
     android:name=".MainApplication"
@@ -22,8 +26,8 @@
       android:screenOrientation="portrait"
     >
       <intent-filter>
-          <action android:name="android.intent.action.MAIN" />
-          <category android:name="android.intent.category.LAUNCHER" />
+        <action android:name="android.intent.action.MAIN" />
+        <category android:name="android.intent.category.LAUNCHER" />
       </intent-filter>
     </activity>
     <activity android:name="com.facebook.react.devsupport.DevSettingsActivity" />
